log

Tue 15 Aug 2023 12:50:23 AM UTC: 
 tests:  0|7
total_score: 0/70
5c85355
Tue 15 Aug 2023 05:58:54 AM UTC: 
 exercises.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
7c30f30
Tue 15 Aug 2023 07:05:55 AM UTC: 
 exercises.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
cf14bb7
Wed 16 Aug 2023 02:20:23 AM UTC: 
 exercises.c | 13 ++++++-------
 1 file changed, 6 insertions(+), 7 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:34:16: error: expected ‘:’ before ‘;’ token
   34 |     temp?arr[i];
      |                ^
      |                :
Compilation failed
202a3a2
Wed 16 Aug 2023 02:20:30 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
79c0546
Wed 16 Aug 2023 02:32:39 AM UTC: 
 exercises.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  0|6
total_score: 10/70
918652f
Wed 16 Aug 2023 02:33:22 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
1d5befa
Wed 16 Aug 2023 03:28:45 PM UTC: 
 exercises.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:48:3: error: useless type name in empty declaration [-Werror]
   48 |   size_t ;
      |   ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
28196ef
Wed 16 Aug 2023 03:34:22 PM UTC: 
 exercises.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:48:13: error: ‘newsize’ undeclared (first use in this function); did you mean ‘newSize’?
   48 |   int pares[newsize];
      |             ^~~~~~~
      |             newSize
exercises.c:48:13: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:51:15: error: ‘j’ undeclared (first use in this function)
   51 |         pares[j]=arr[i];
      |               ^
exercises.c:48:7: error: unused variable ‘pares’ [-Werror=unused-variable]
   48 |   int pares[newsize];
      |       ^~~~~
exercises.c:56:1: error: control reaches end of non-void function [-Werror=return-type]
   56 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
28196ef
